--- a/Capstone_Part 1.ipynb
+++ b/Capstone_Part 1.ipynb
@@ -11,8 +11,8 @@
     "  \n",
     "\n",
     "    \n",
-    " <center> **_The Battle of Alberta_**\n",
-    " <center> **_Calgary vs Edmonton_**     \n",
+    " ## **_The Battle of Alberta_**\n",
+    " ### **_Calgary vs Edmonton_**     \n",
     "     \n",
     "<font color=\"black\">\n",
     "\n",
