--- a/Capstone_Part 1.ipynb
+++ b/Capstone_Part 1.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "## Capstone Project - The Battle of the Neighborhoods\n",
-    "<p style=\"text-align:center\">takes on</p>\n",
+    "TAKES ON\n"
+    #"<p style=\"text-align:center\">takes on</p>\n",
     "\n",
     "<font color=\"purple\">\n",
     "  \n",
