--- a/Capstone_Part 1.ipynb
+++ b/Capstone_Part 1.ipynb
@@ -5,12 +5,7 @@
    "metadata": {},
    "source": [
     "## Capstone Project - The Battle of the Neighborhoods\n",
-    "TAKES ON\n"
-    #"<p style=\"text-align:center\">takes on</p>\n",
-    "\n",
-    "<font color=\"purple\">\n",
-    "  \n",
-    "\n",
+    "####TAKES ON\n"
     "    \n",
     " ## **_The Battle of Alberta_**\n",
     " ### **_Calgary vs Edmonton_**     \n",
